# penguin-electronics-inventory

doc/schema/: schema.mwb
src/gtk-client/: CMakeLists.txt
src/gtk-client/penguin-gtk/: AddCategoryDialog.cpp  AddCategoryDialog.h  AddManufacturerDialog.cpp  AddManufacturerDialog.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/server/config/: config.inc.php.example
src/server/inc/: util.inc.php
src/server/lang/: current_lang.php  en-us.php
src/server/setup/: cleanup.sql  setup.sql
src/server/www/: penguinserver.php  setup.php
src/web-client/www/: config.js.example  index.html  index.js  strings.js  style.css
